fix white artifact on .clip cells on mobile

--- a/public/scss/_pages.scss
+++ b/public/scss/_pages.scss
@@ -130,6 +130,16 @@
         font-size:1.5em;
     }
 
+    .clip {
+        width:100.2%;
+        margin-left:-.1%;
+
+        @include mq('tablet-wide'){
+            margin:0;
+            width:auto;
+        }
+    }
+
     .clip.pad, .clip.bigpad {
         padding-top:40px;
         padding-bottom:40px;
